# project-patterns

./: .gitignore  CMakeLists.txt  README.md  build.sh
abstract-factory/: CMakeLists.txt  abstract-factory.h  main.cpp
adapter/: CMakeLists.txt  figury.h  main.cpp
bridge/: CMakeLists.txt  bridge.h  main.cpp
builder/: CMakeLists.txt  builder.h  main.cpp
chain-of-resp/: CMakeLists.txt  chain.h  main.cpp
composit/: CMakeLists.txt  composit.h  main.cpp
decorator/: CMakeLists.txt  decorator.h  main.cpp
facade/: CMakeLists.txt  main.cpp  vector.h
factory-method/: CMakeLists.txt  factory-method.h  main.cpp
iterator/: CMakeLists.txt  list.h  listiter.h  main  main.cpp
mediator/: CMakeLists.txt  main.cpp  mediator.cpp  mediator.h  widget.cpp  widget.h
observer/: CMakeLists.txt  main.cpp  observer.cpp  observer.h  subject.cpp  subject.h
proxy/: CMakeLists.txt  main.cpp  proxy.h
singleton/: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h
state/: CMakeLists.txt  main.cpp  state.h
strategia/: CMakeLists.txt  main.cpp  strategia.h
template-method/: CMakeLists.txt  main.cpp  template_method.h
visitor/: CMakeLists.txt  main.cpp  visitor.h
