cmake_minimum_required(VERSION 3.5)

project(one_to_rule_them_all)

add_subdirectory(adapter)
add_subdirectory(facade)
add_subdirectory(iterator)
add_subdirectory(singleton)
add_subdirectory(bridge)
add_subdirectory(strategia)
add_subdirectory(template-method)
add_subdirectory(composit)
add_subdirectory(factory-method)
add_subdirectory(decorator)
add_subdirectory(abstract-factory)
add_subdirectory(observer)
add_subdirectory(chain-of-resp)